tests/fixtures/errors/dim_mismatch_add.ksr
// error: cannot add Length + Time
param alt: Length = 400 km;
param period: Time = 90 min;
node bad: Length = @alt + @period;
